--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
       "Current google-chrome version is 100.0.4896\n",
       "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
       "Driver [/Users/ESheldon/.wdm/drivers/chromedriver/mac64/100.0.4896.60/chromedriver] found in cache\n",
-      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_18415/1041633887.py:34: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_19918/2752682990.py:35: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  self.driver = Chrome(ChromeDriverManager().install())\n"
      ]
     },
@@ -23,7 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['https://ideas.lego.com/projects/20aaf315-95b7-4688-af96-4372fd00e4a0', 'https://ideas.lego.com/projects/04d3323b-57ed-4a3d-afad-f833863c8c59', 'https://ideas.lego.com/projects/b6e841fb-e550-4257-8519-90141ab9386a', 'https://ideas.lego.com/projects/11a16bff-059b-4d93-a3f4-bba91dcb689b', 'https://ideas.lego.com/projects/74aa3de2-7299-4279-9da1-aa8f83c93bbc', 'https://ideas.lego.com/projects/6f7f020b-aae5-4b91-8990-df1ffafe94e0', 'https://ideas.lego.com/projects/ddce73cb-73ff-4d91-8532-fbeaf1e9b729', 'https://ideas.lego.com/projects/8a664f58-1d61-4c0d-9ccd-452d8a55bada', 'https://ideas.lego.com/projects/c60f8646-3574-49ed-b995-8fdaf4181907', 'https://ideas.lego.com/projects/9e205f56-30c1-4c1b-9137-f48605777fe0', 'https://ideas.lego.com/projects/0ae2c516-7bb1-44d8-8c23-37a025021ff0', 'https://ideas.lego.com/projects/edf2ea21-8559-471a-b28c-3b01dc7f689a', 'https://ideas.lego.com/projects/2c815d02-e32d-4b4d-8c34-a5970e587b86', 'https://ideas.lego.com/projects/8d2a4229-d6e0-4f1c-bbf7-4a1ae1ad29f1', 'https://ideas.lego.com/projects/fbda7705-b34d-4cfd-a76c-bb3ec8bd0528', 'https://ideas.lego.com/projects/bc8f59a3-2d26-449b-a2ac-356f1610b0e4', 'https://ideas.lego.com/projects/756deb20-5514-47b0-a8a4-f4e5836e9094', 'https://ideas.lego.com/projects/e0a16d11-f6e5-4812-9976-6bee191ce38b', 'https://ideas.lego.com/projects/ded70ef3-5ddf-4ec3-9407-33e29432ff78', 'https://ideas.lego.com/projects/0c15f9fb-62f1-4712-b0ca-9d82f824a4fb', 'https://ideas.lego.com/projects/604deabd-9625-460b-bc69-f984bc857e6d']\n"
+      "['https://ideas.lego.com/projects/24f16de1-496f-4b1c-a94b-0ffa31b26b7d', 'https://ideas.lego.com/projects/cd090350-67ba-4035-b15d-b42bd19d1f8e', 'https://ideas.lego.com/projects/41dbbf6b-b4da-4411-8ebe-5a82833d6f6d', 'https://ideas.lego.com/projects/edfb549b-09dc-4553-b6e2-432557e8cd46', 'https://ideas.lego.com/projects/eacb8034-7bda-425c-b822-df8fe35718a9', 'https://ideas.lego.com/projects/df545ace-2d23-4d70-a9c9-e22e15fa681e', 'https://ideas.lego.com/projects/bc1bd414-b55e-45d9-a3df-88ad24af9997', 'https://ideas.lego.com/projects/fd979f9c-e246-42f6-8f41-a60933654ddd', 'https://ideas.lego.com/projects/36dd7532-2174-46e5-8a72-7ea26a30b937', 'https://ideas.lego.com/projects/9193e8c1-0546-4e73-99a2-2f89c5e2ddd3', 'https://ideas.lego.com/projects/5c2712c4-11b0-4e0c-9182-f43cd702eee2', 'https://ideas.lego.com/projects/c55cb25c-e9b0-4630-96c9-f9a9ba3d1620', 'https://ideas.lego.com/projects/2c815d02-e32d-4b4d-8c34-a5970e587b86', 'https://ideas.lego.com/projects/8c26877d-5637-4813-b503-336ee91880d2', 'https://ideas.lego.com/projects/40a5de26-68e6-4767-b521-33076855a066', 'https://ideas.lego.com/projects/2de8e4d3-e66c-4f90-91c2-131f66b01199', 'https://ideas.lego.com/projects/6f4f1f98-eac9-4a87-b37d-9d17a18f84e8', 'https://ideas.lego.com/projects/02d9e4d4-d707-4ec1-8203-daf6db35ce6c', 'https://ideas.lego.com/projects/d4fdfcfe-4e2b-4f92-87b1-38a8b55dd4c2', 'https://ideas.lego.com/projects/420fe286-c741-4db9-895a-608a418a3558', 'https://ideas.lego.com/projects/fd6968b6-6853-4a5f-85fa-5f464b3995eb', 'https://ideas.lego.com/projects/f075e436-80e9-47e8-baca-6e22f289c29b', 'https://ideas.lego.com/projects/eeaa08f3-2ee1-4d0f-8415-8346332012e5', 'https://ideas.lego.com/projects/d52c3c68-543c-4e3e-a066-d5dc0f8c44ae', 'https://ideas.lego.com/projects/a5cd41bb-fe51-465f-815b-518be61fdac3', 'https://ideas.lego.com/projects/d0504fdf-bf98-4968-9ed0-802d30233070', 'https://ideas.lego.com/projects/0296c894-0644-4808-9f14-b58810def390', 'https://ideas.lego.com/projects/a478fe09-a189-4fb4-914e-332cd5911cbb', 'https://ideas.lego.com/projects/ae4ffc41-6bb5-4ee9-b2df-445ed9b14cc5', 'https://ideas.lego.com/projects/6ffb50ea-8e6f-4c3c-ba4c-958ad8c0884c', 'https://ideas.lego.com/projects/9d05e07c-9a39-4fe0-ab29-053467156a5b', 'https://ideas.lego.com/projects/5df426dc-f6da-4728-89d2-7b546f161073', 'https://ideas.lego.com/projects/2ca32bec-84aa-4f74-a8cd-668b9b4516dd', 'https://ideas.lego.com/projects/5e6b823d-2b8e-4e1b-aaed-556083d59341', 'https://ideas.lego.com/projects/1b1f7329-b417-4074-84b4-58d9734ad196', 'https://ideas.lego.com/projects/4e7792d0-fbfc-4cad-b7c9-f5985b510597', 'https://ideas.lego.com/projects/9e0ac77e-c7ae-4411-a007-cbc5dda446bd', 'https://ideas.lego.com/projects/0b27b870-d51c-406c-ad47-8f577707145f', 'https://ideas.lego.com/projects/d259b0c1-51ac-4a71-89ce-6c6c442f1315', 'https://ideas.lego.com/projects/fbe7172f-c422-45e6-a2e2-25d5d83f3488', 'https://ideas.lego.com/projects/c36decb7-868f-43da-ae7d-66bd1f8515c7', 'https://ideas.lego.com/projects/2636b48e-3f22-469e-a77b-b18516a38176', 'https://ideas.lego.com/projects/dfc5c0ac-59ef-42a0-beb4-9cb7558f0b32', 'https://ideas.lego.com/projects/65a490cc-7c3b-47ee-80fc-189cdd889e9f', 'https://ideas.lego.com/projects/5ff51711-6072-49fe-8d39-aa8c0bd815b4', 'https://ideas.lego.com/projects/7aa1e2ed-12df-4a73-9e4b-b595a16d3760', 'https://ideas.lego.com/projects/1e1a73ab-9909-4b2f-941b-02d7eec8fb37']\n",
+      "47\n",
+      "{'id': '02d7eec8fb37', 'uuid': UUID('75ff0ef9-0a7e-4016-9be0-696d697059f4'), 'URL': 'https://ideas.lego.com/projects/1e1a73ab-9909-4b2f-941b-02d7eec8fb37'}\n"
      ]
     }
    ],
@@ -49,6 +51,7 @@
     "from pathlib import Path\n",
     "import os\n",
     "import csv\n",
+    "import uuid\n",
     "\n",
     "'''\n",
     "This module contains the scraper class and its methods.\n",
@@ -73,7 +76,6 @@
     "        search_bar.click()\n",
     "        search_bar.send_keys(search_term)\n",
     "        search_bar.send_keys(u'\\ue007')\n",
-    "        #self.click_button(XPATH)\n",
     "\n",
     "    def click_button(self, XPATH):\n",
     "        button = self.driver.find_element(By.XPATH, XPATH)\n",
@@ -85,17 +87,25 @@
     "    def scroll_down_bottom(self):\n",
     "        self.driver.execute_script(\"window.scrollTo(0,document.body.scrollHeight)\")\n",
     "\n",
-    "    def accept_cookies(self, frame, XPATH):\n",
-    "        time.sleep(2)\n",
+    "    def accept_cookies(self, frame_id, XPATH):\n",
+    "        #time.sleep(2)\n",
     "        try:\n",
-    "            if frame!=None:\n",
-    "                self.switch_frame(frame)\n",
+    "            if frame_id!=None:\n",
+    "                self.switch_frame(frame_id)\n",
     "            else: pass\n",
+    "            self.wait_for(XPATH)\n",
     "            self.click_button(XPATH)\n",
     "        except NoSuchElementException:\n",
     "            pass\n",
     "\n",
+    "    def wait_for(self, XPATH, delay = 10):\n",
+    "        try:    \n",
+    "            WebDriverWait(self.driver, delay).until(EC.presence_of_element_located((By.XPATH, XPATH)))\n",
+    "        except TimeoutException:\n",
+    "            print('Loading took too long. Timeout occurred.')\n",
+    "\n",
     "    def switch_frame(self, frame_id):\n",
+    "        self.wait_for(frame_id)\n",
     "        self.driver.switchTo().frame(frame_id)\n",
     "\n",
     "    def quit(self):\n",
@@ -112,60 +122,94 @@
     "        self.click_button(XPATH1)\n",
     "        self.click_button(XPATH2)\n",
     "    \n",
-    "    def get_link(self, XPATH):\n",
-    "        identifier = self.driver.find_element(By.XPATH, XPATH) \n",
-    "        a_tag = identifier.find_element(By.TAG_NAME, 'a')   \n",
-    "        link = a_tag.get_attribute('href')\n",
-    "        self.open_url(link)\n",
+    "    def infinite_scroll(self):\n",
+    "        last_height = self.driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "        while True:\n",
+    "            self.scroll_down_bottom()\n",
+    "            time.sleep(3)   \n",
+    "            new_height = self.driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "            if new_height == last_height:\n",
+    "                break\n",
+    "            last_height = new_height\n",
     "\n",
-    "    def get_list_links(self, XPATH_container, XPATH_search_results):\n",
+    "    def get_list_links(self, XPATH_container, XPATH_search_results, delay=10):\n",
     "        try: \n",
+    "            self.scroll_down_bottom()\n",
+    "            self.see_more('//*[@id=\"search-more\"]/a')\n",
+    "            self.infinite_scroll()\n",
     "            container = self.driver.find_element(By.XPATH, XPATH_container)\n",
     "            search_list = container.find_elements(By.XPATH, XPATH_search_results)\n",
-    "            link_list = []\n",
+    "\n",
+    "            self.link_list = []\n",
     "\n",
     "            for result in search_list:\n",
     "                a_tag = result.find_element(By.TAG_NAME, 'a')\n",
     "                link = a_tag.get_attribute('href')\n",
-    "                link_list.append(link)\n",
+    "                self.link_list.append(link)\n",
     "            \n",
-    "            print(link_list)\n",
+    "            print(self.link_list)\n",
+    "            print(len(self.link_list))\n",
     "\n",
     "        except NoSuchElementException:\n",
     "            print('No results found.')\n",
     "            pass\n",
     "\n",
-    "    # def click_button(self, class_name):\n",
-    "    #     button = self.driver.find_element(By.CLASS_NAME, class_name)\n",
-    "    #     button.click()\n",
+    "    def create_id(self):\n",
+    "        link_id = []\n",
+    "        # link_uuid = []\n",
+    "        info = {\"id\": link_id,\n",
+    "                \"uuid\": [],\n",
+    "                \"URL\": []}\n",
+    "        for i in range(len(self.link_list)):\n",
+    "            ID = self.link_list[i][-12:]\n",
+    "            UUID = uuid.uuid4()\n",
+    "            info[\"id\"] = link_id.append(ID), \n",
+    "                \"uuid\": UUID, \n",
+    "                \"URL\": self.link_list[i]}\n",
+    "            # link_id.append(ID)\n",
+    "            # link_uuid.append(UUID)\n",
+    "        \n",
+    "        #print(link_id)\n",
+    "        # info = {\n",
+    "        #     \"id\": ID, \n",
+    "        #     \"uuid\": UUID\n",
+    "        # }\n",
+    "        print(info)\n",
+    "        return info\n",
     "\n",
-    "    # def search(self, ID, search_term, XPATH):\n",
-    "    #     self.search_bar(ID=str, search_term=str)\n",
-    "    #     self.click_button(XPATH)\n",
+    "    # def create_uuid(self):\n",
+    "    #     link_uuid = []\n",
+    "    #     for i in range(len(self.link_list)):\n",
+    "    #         UUID = uuid.uuid4()\n",
+    "    #         link_uuid.append(UUID)\n",
+    "    #     print(link_uuid)\n",
     "\n",
-    "    # def search(self, name=str, search_term=str, XPATH=str):\n",
-    "    #     search_bar = self.driver.find_element(By.NAME, name)\n",
-    "    #     search_bar.click()\n",
-    "    #     search_bar.send_keys(search_term)\n",
-    "    #     self.click_button(XPATH)\n",
+    "    # def create_dict(self):\n",
+    "    #     dict = {}\n",
+    "    #     {'id': actual id, 'uuid': actual_uuid}\n",
     "\n",
-    "def web_scraper():\n",
-    "    scraper = Scraper('https://ideas.lego.com')\n",
-    "    try:\n",
-    "        scraper.accept_cookies(frame=None, XPATH= '//*[@id=\"prompt-footer\"]/div/div/button')\n",
-    "        #scraper.get_link('//div[@class=\"header-link\"][1]')\n",
-    "        #scraper.explore_product_ideas('//*[@id=\"mobile-menu-left___BV_modal_body_\"]/div/div/div[2]/div[1]/a', '//[@data-axl=\"collections_product-ideas\"]')\n",
-    "        scraper.search(name='query', search_term='trains')\n",
-    "        scraper.get_list_links('//*[@id=\"search_results\"]', './div')\n",
-    "        time.sleep(2)\n",
-    "        # scraper.scroll_down_bottom()\n",
-    "        # time.sleep(2)\n",
-    "        # scraper.see_more('//*[@id=\"search-more\"]/a')\n",
-    "        # #scraper.scroll_up_top()\n",
-    "        # time.sleep(4)\n",
-    "    finally: scraper.quit()\n",
+    "\n",
     "\n",
     "if __name__ == '__main__': \n",
+    "\n",
+    "    def web_scraper():\n",
+    "        scraper = Scraper('https://ideas.lego.com')\n",
+    "        try:\n",
+    "            scraper.accept_cookies(frame_id=None, XPATH= '//button[@aria-label=\"Reject cookies\"]')\n",
+    "            #scraper.explore_product_ideas('//a[@class=\"sub-menu\"][1]', '//div[@class=\"header-link\"][1]')\n",
+    "            scraper.search(name='query', search_term='piano')\n",
+    "            scraper.get_list_links('//*[@id=\"search_results\"]', './div')\n",
+    "            time.sleep(2)\n",
+    "            scraper.create_id()\n",
+    "            #scraper.create_uuid()\n",
+    "            # scraper.scroll_down_bottom()\n",
+    "            # time.sleep(2)\n",
+    "            # scraper.see_more('//*[@id=\"search-more\"]/a')\n",
+    "            # #scraper.scroll_up_top()\n",
+    "            # time.sleep(4)\n",
+    "        finally: scraper.quit()\n",
+    "\n",
+    "\n",
     "    web_scraper()\n",
     "\n"
    ]
