adds download_images method

--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -52,6 +52,8 @@
     "import os\n",
     "import csv\n",
     "import uuid\n",
+    "import urllib\n",
+    "\n",
     "\n",
     "'''\n",
     "This module contains the scraper class and its methods.\n",
@@ -170,6 +172,12 @@
     "        print(self.info)\n",
     "        return self.info\n",
     "\n",
+    "    def download_images(self, path='.'):\n",
+    "        if not os.path.exists(f'{path}/{self.search_term}'):\n",
+    "            os.makedirs(f'{path}/{self.search_term}')\n",
+    "        \n",
+    "        for i, img in enumerate(self.img_list):\n",
+    "            urllib.request.urlretrieve(img, f'{path}/{self.search_term}/{self.search_term}{i}.png')\n",
     "\n",
     "\n",
     "\n",
