makes search_term a global variable

--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -60,7 +60,7 @@
     "'''\n",
     "\n",
     "class Scraper:\n",
-    "    def __init__(self, url, headless=False):\n",
+    "    def __init__(self, url, search_term, headless=False):\n",
     "        options = Options()\n",
     "        if headless:\n",
     "            options.add_argument('--headless')\n",
@@ -68,15 +68,16 @@
     "        else:\n",
     "            self.driver = Chrome(ChromeDriverManager().install())\n",
     "        self.url = url\n",
+    "        self.search_term = input('What would you like to search?')\n",
     "        self.driver.get(self.url)\n",
     "   \n",
     "    def open_url(self, url):\n",
     "        self.driver.get(url)\n",
     "    \n",
-    "    def search(self, name=str, search_term=str):\n",
+    "    def search(self, name=str):\n",
     "        search_bar = self.driver.find_element(By.NAME, name)\n",
     "        search_bar.click()\n",
-    "        search_bar.send_keys(search_term)\n",
+    "        search_bar.send_keys(self.search_term)\n",
     "        search_bar.send_keys(u'\\ue007')\n",
     "\n",
     "    def click_button(self, XPATH):\n",
@@ -188,7 +189,7 @@
     "        try:\n",
     "            scraper.accept_cookies(frame_id=None, XPATH= '//button[@aria-label=\"Reject cookies\"]')\n",
     "            #scraper.explore_product_ideas('//a[@class=\"sub-menu\"][1]', '//div[@class=\"header-link\"][1]')\n",
-    "            scraper.search(name='query', search_term='piano')\n",
+    "            scraper.search(name='query')\n",
     "            scraper.get_list_links('//*[@id=\"search_results\"]', './div')\n",
     "            time.sleep(2)\n",
     "            scraper.create_id()\n",
