gets image links

--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -156,7 +156,29 @@
     "        except NoSuchElementException:\n",
     "            print('No results found.')\n",
     "            pass\n",
+    "    \n",
+    "    def get_img_links(self, XPATH_wrapper, XPATH_main_image, XPATH_img_container, XPATH_thumbnails):\n",
+    "        self.img_list = []\n",
+    "        for link in self.link_list:\n",
+    "            self.open_url(link)\n",
+    "            try:\n",
+    "                wrapper = self.driver.find_element(By.XPATH, XPATH_wrapper)\n",
+    "                main_image = wrapper.find_elements(By.XPATH, XPATH_main_image)\n",
+    "                img_tag = main_image.find_element(By.TAG_NAME, 'img')\n",
+    "                img_link = img_tag.get_attribute('src')\n",
+    "                self.img_list.append(img_link)\n",
     "\n",
+    "                img_container = self.driver.find_element(By.XPATH, XPATH_img_container)\n",
+    "                thumbnail_list = img_container.find_elements(By.XPATH, XPATH_thumbnails)\n",
+    "                for thumbnail in thumbnail_list:\n",
+    "                    img_tag = thumbnail.find_element(By.TAG_NAME, 'img')\n",
+    "                    thumbnail_link = img_tag.get_attribute('src')\n",
+    "                    self.img_list.append(thumbnail_link)\n",
+    "\n",
+    "\n",
+    "            except NoSuchElementException:\n",
+    "                print('No images found.')\n",
+    "                pass\n",
     "    def create_id(self):\n",
     "        self.link_id = []\n",
     "        self.link_uuid = []\n",
