adds imput for search_term

--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
       "Current google-chrome version is 100.0.4896\n",
       "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
       "Driver [/Users/ESheldon/.wdm/drivers/chromedriver/mac64/100.0.4896.60/chromedriver] found in cache\n",
-      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_19918/366271478.py:35: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_4436/1293983630.py:37: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  self.driver = Chrome(ChromeDriverManager().install())\n"
      ]
     },
@@ -23,9 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['https://ideas.lego.com/projects/24f16de1-496f-4b1c-a94b-0ffa31b26b7d', 'https://ideas.lego.com/projects/cd090350-67ba-4035-b15d-b42bd19d1f8e', 'https://ideas.lego.com/projects/41dbbf6b-b4da-4411-8ebe-5a82833d6f6d', 'https://ideas.lego.com/projects/edfb549b-09dc-4553-b6e2-432557e8cd46', 'https://ideas.lego.com/projects/eacb8034-7bda-425c-b822-df8fe35718a9', 'https://ideas.lego.com/projects/df545ace-2d23-4d70-a9c9-e22e15fa681e', 'https://ideas.lego.com/projects/bc1bd414-b55e-45d9-a3df-88ad24af9997', 'https://ideas.lego.com/projects/fd979f9c-e246-42f6-8f41-a60933654ddd', 'https://ideas.lego.com/projects/c55cb25c-e9b0-4630-96c9-f9a9ba3d1620', 'https://ideas.lego.com/projects/36dd7532-2174-46e5-8a72-7ea26a30b937', 'https://ideas.lego.com/projects/2c815d02-e32d-4b4d-8c34-a5970e587b86', 'https://ideas.lego.com/projects/5c2712c4-11b0-4e0c-9182-f43cd702eee2', 'https://ideas.lego.com/projects/9193e8c1-0546-4e73-99a2-2f89c5e2ddd3', 'https://ideas.lego.com/projects/40a5de26-68e6-4767-b521-33076855a066', 'https://ideas.lego.com/projects/8c26877d-5637-4813-b503-336ee91880d2', 'https://ideas.lego.com/projects/2de8e4d3-e66c-4f90-91c2-131f66b01199', 'https://ideas.lego.com/projects/6f4f1f98-eac9-4a87-b37d-9d17a18f84e8', 'https://ideas.lego.com/projects/02d9e4d4-d707-4ec1-8203-daf6db35ce6c', 'https://ideas.lego.com/projects/d4fdfcfe-4e2b-4f92-87b1-38a8b55dd4c2', 'https://ideas.lego.com/projects/420fe286-c741-4db9-895a-608a418a3558', 'https://ideas.lego.com/projects/fd6968b6-6853-4a5f-85fa-5f464b3995eb', 'https://ideas.lego.com/projects/f075e436-80e9-47e8-baca-6e22f289c29b', 'https://ideas.lego.com/projects/eeaa08f3-2ee1-4d0f-8415-8346332012e5', 'https://ideas.lego.com/projects/d52c3c68-543c-4e3e-a066-d5dc0f8c44ae', 'https://ideas.lego.com/projects/a5cd41bb-fe51-465f-815b-518be61fdac3', 'https://ideas.lego.com/projects/d0504fdf-bf98-4968-9ed0-802d30233070', 'https://ideas.lego.com/projects/0296c894-0644-4808-9f14-b58810def390', 'https://ideas.lego.com/projects/a478fe09-a189-4fb4-914e-332cd5911cbb', 'https://ideas.lego.com/projects/ae4ffc41-6bb5-4ee9-b2df-445ed9b14cc5', 'https://ideas.lego.com/projects/9d05e07c-9a39-4fe0-ab29-053467156a5b', 'https://ideas.lego.com/projects/5df426dc-f6da-4728-89d2-7b546f161073', 'https://ideas.lego.com/projects/2ca32bec-84aa-4f74-a8cd-668b9b4516dd', 'https://ideas.lego.com/projects/5e6b823d-2b8e-4e1b-aaed-556083d59341', 'https://ideas.lego.com/projects/1b1f7329-b417-4074-84b4-58d9734ad196', 'https://ideas.lego.com/projects/4e7792d0-fbfc-4cad-b7c9-f5985b510597', 'https://ideas.lego.com/projects/6ffb50ea-8e6f-4c3c-ba4c-958ad8c0884c', 'https://ideas.lego.com/projects/9e0ac77e-c7ae-4411-a007-cbc5dda446bd', 'https://ideas.lego.com/projects/0b27b870-d51c-406c-ad47-8f577707145f', 'https://ideas.lego.com/projects/d259b0c1-51ac-4a71-89ce-6c6c442f1315', 'https://ideas.lego.com/projects/c36decb7-868f-43da-ae7d-66bd1f8515c7', 'https://ideas.lego.com/projects/2636b48e-3f22-469e-a77b-b18516a38176', 'https://ideas.lego.com/projects/fbe7172f-c422-45e6-a2e2-25d5d83f3488', 'https://ideas.lego.com/projects/65a490cc-7c3b-47ee-80fc-189cdd889e9f', 'https://ideas.lego.com/projects/dfc5c0ac-59ef-42a0-beb4-9cb7558f0b32', 'https://ideas.lego.com/projects/5ff51711-6072-49fe-8d39-aa8c0bd815b4', 'https://ideas.lego.com/projects/7aa1e2ed-12df-4a73-9e4b-b595a16d3760', 'https://ideas.lego.com/projects/1e1a73ab-9909-4b2f-941b-02d7eec8fb37']\n",
-      "47\n",
-      "{'id': ['0ffa31b26b7d', 'b42bd19d1f8e', '5a82833d6f6d', '432557e8cd46', 'df8fe35718a9', 'e22e15fa681e', '88ad24af9997', 'a60933654ddd', 'f9a9ba3d1620', '7ea26a30b937', 'a5970e587b86', 'f43cd702eee2', '2f89c5e2ddd3', '33076855a066', '336ee91880d2', '131f66b01199', '9d17a18f84e8', 'daf6db35ce6c', '38a8b55dd4c2', '608a418a3558', '5f464b3995eb', '6e22f289c29b', '8346332012e5', 'd5dc0f8c44ae', '518be61fdac3', '802d30233070', 'b58810def390', '332cd5911cbb', '445ed9b14cc5', '053467156a5b', '7b546f161073', '668b9b4516dd', '556083d59341', '58d9734ad196', 'f5985b510597', '958ad8c0884c', 'cbc5dda446bd', '8f577707145f', '6c6c442f1315', '66bd1f8515c7', 'b18516a38176', '25d5d83f3488', '189cdd889e9f', '9cb7558f0b32', 'aa8c0bd815b4', 'b595a16d3760', '02d7eec8fb37'], 'uuid': [UUID('93fe7d3e-cd23-477f-89ad-5f8a244b41c1'), UUID('c0d6848b-1487-4893-850a-c7c68f746553'), UUID('1b5a33a6-bff0-41d3-a14d-caa9c901c0da'), UUID('de17cf51-127d-4cfb-abad-f4803cc4608e'), UUID('ba0b851a-feb4-4285-9fa1-06aecfdcff1e'), UUID('e5a9212a-3220-422b-bc0a-f250165d0646'), UUID('3305a137-320d-4eb0-9976-7c5f4d23bc6e'), UUID('3439d439-9fa0-442b-b5c1-bbb8539c5643'), UUID('47bcb035-50c1-4285-a0ca-74ec13a21e16'), UUID('faaf220f-850e-4d52-af57-5b78ec5de6a6'), UUID('8e2c0baf-4c36-45ff-8a41-924193480b73'), UUID('3bff8c01-04ba-4932-9e9f-76e03035bdb6'), UUID('79574a51-9001-4381-b22c-1014c5d48c98'), UUID('99370df4-02c9-4a09-8ed8-38230157840c'), UUID('e0d0827b-9604-4866-b983-4c58033aa9e9'), UUID('18b113d7-45fd-4793-90d0-bc6de53d6847'), UUID('ed95ba98-36c4-4036-8960-ae1eae9c26d7'), UUID('e0ea5b2e-7f26-424a-a35b-90491e7581f1'), UUID('59ac9017-f5a9-442a-9b7f-6d6ecaf133bf'), UUID('fe29241d-6ba5-41fa-a7c6-9d1793911287'), UUID('7a6c25cb-c757-4e2e-a0e7-02a4a9592f39'), UUID('c05738c4-eb98-44d2-99be-38527fcb533f'), UUID('75bb646d-f11b-48c9-b91a-ded1623780d5'), UUID('5f9f3100-8159-4f37-8223-47483e3703b2'), UUID('857e4879-a2da-4462-96e9-2ca31bc4502e'), UUID('d37c1a4f-835b-4277-98a5-11ba31f7f7b3'), UUID('6becde1c-c51e-4124-86fb-ba79bb1f8e39'), UUID('39b9bc40-2029-4869-9f7f-43e75053bc4b'), UUID('a41d3c21-fe9b-4faf-9c81-68a9a7c5e8ba'), UUID('e33a9583-b23c-4f93-ac61-0770c94468f8'), UUID('6877e15a-1d4c-43f8-a8d1-b0618626dc04'), UUID('070f78d6-01ff-4da8-b1b2-79a97b73fb3f'), UUID('af1bd273-1fea-4d3b-8295-32659fbbcbeb'), UUID('a6fe3e4d-f635-4777-a95e-9ae4d057796f'), UUID('21df5535-d9bc-4297-9b68-713e64e45c38'), UUID('bf0dad88-f547-495d-a0ec-8563cec29d9d'), UUID('4d64902a-4825-48d1-b374-38bcfe0c6ff1'), UUID('5fa71204-97ba-462e-9791-cd4f19f75658'), UUID('00154b36-ec6d-476d-ae8b-98bc4b111477'), UUID('865e21aa-fdb4-44ee-b212-cd95d544ce1c'), UUID('49071ea4-e264-4809-9120-2bd3602948b0'), UUID('244ff6ee-762a-4305-842b-72a47ca6af67'), UUID('39ec0cf9-908c-4618-9201-14a989dcf632'), UUID('2b91a9cf-7737-4562-ba31-594f26191d58'), UUID('d10085c9-366e-4410-9d3f-fdcfd63831e9'), UUID('37427d5a-bea6-46e0-9511-e113f470c885'), UUID('ac70112e-80d6-49af-9243-d602d5f6775a')], 'URL': ['https://ideas.lego.com/projects/24f16de1-496f-4b1c-a94b-0ffa31b26b7d', 'https://ideas.lego.com/projects/cd090350-67ba-4035-b15d-b42bd19d1f8e', 'https://ideas.lego.com/projects/41dbbf6b-b4da-4411-8ebe-5a82833d6f6d', 'https://ideas.lego.com/projects/edfb549b-09dc-4553-b6e2-432557e8cd46', 'https://ideas.lego.com/projects/eacb8034-7bda-425c-b822-df8fe35718a9', 'https://ideas.lego.com/projects/df545ace-2d23-4d70-a9c9-e22e15fa681e', 'https://ideas.lego.com/projects/bc1bd414-b55e-45d9-a3df-88ad24af9997', 'https://ideas.lego.com/projects/fd979f9c-e246-42f6-8f41-a60933654ddd', 'https://ideas.lego.com/projects/c55cb25c-e9b0-4630-96c9-f9a9ba3d1620', 'https://ideas.lego.com/projects/36dd7532-2174-46e5-8a72-7ea26a30b937', 'https://ideas.lego.com/projects/2c815d02-e32d-4b4d-8c34-a5970e587b86', 'https://ideas.lego.com/projects/5c2712c4-11b0-4e0c-9182-f43cd702eee2', 'https://ideas.lego.com/projects/9193e8c1-0546-4e73-99a2-2f89c5e2ddd3', 'https://ideas.lego.com/projects/40a5de26-68e6-4767-b521-33076855a066', 'https://ideas.lego.com/projects/8c26877d-5637-4813-b503-336ee91880d2', 'https://ideas.lego.com/projects/2de8e4d3-e66c-4f90-91c2-131f66b01199', 'https://ideas.lego.com/projects/6f4f1f98-eac9-4a87-b37d-9d17a18f84e8', 'https://ideas.lego.com/projects/02d9e4d4-d707-4ec1-8203-daf6db35ce6c', 'https://ideas.lego.com/projects/d4fdfcfe-4e2b-4f92-87b1-38a8b55dd4c2', 'https://ideas.lego.com/projects/420fe286-c741-4db9-895a-608a418a3558', 'https://ideas.lego.com/projects/fd6968b6-6853-4a5f-85fa-5f464b3995eb', 'https://ideas.lego.com/projects/f075e436-80e9-47e8-baca-6e22f289c29b', 'https://ideas.lego.com/projects/eeaa08f3-2ee1-4d0f-8415-8346332012e5', 'https://ideas.lego.com/projects/d52c3c68-543c-4e3e-a066-d5dc0f8c44ae', 'https://ideas.lego.com/projects/a5cd41bb-fe51-465f-815b-518be61fdac3', 'https://ideas.lego.com/projects/d0504fdf-bf98-4968-9ed0-802d30233070', 'https://ideas.lego.com/projects/0296c894-0644-4808-9f14-b58810def390', 'https://ideas.lego.com/projects/a478fe09-a189-4fb4-914e-332cd5911cbb', 'https://ideas.lego.com/projects/ae4ffc41-6bb5-4ee9-b2df-445ed9b14cc5', 'https://ideas.lego.com/projects/9d05e07c-9a39-4fe0-ab29-053467156a5b', 'https://ideas.lego.com/projects/5df426dc-f6da-4728-89d2-7b546f161073', 'https://ideas.lego.com/projects/2ca32bec-84aa-4f74-a8cd-668b9b4516dd', 'https://ideas.lego.com/projects/5e6b823d-2b8e-4e1b-aaed-556083d59341', 'https://ideas.lego.com/projects/1b1f7329-b417-4074-84b4-58d9734ad196', 'https://ideas.lego.com/projects/4e7792d0-fbfc-4cad-b7c9-f5985b510597', 'https://ideas.lego.com/projects/6ffb50ea-8e6f-4c3c-ba4c-958ad8c0884c', 'https://ideas.lego.com/projects/9e0ac77e-c7ae-4411-a007-cbc5dda446bd', 'https://ideas.lego.com/projects/0b27b870-d51c-406c-ad47-8f577707145f', 'https://ideas.lego.com/projects/d259b0c1-51ac-4a71-89ce-6c6c442f1315', 'https://ideas.lego.com/projects/c36decb7-868f-43da-ae7d-66bd1f8515c7', 'https://ideas.lego.com/projects/2636b48e-3f22-469e-a77b-b18516a38176', 'https://ideas.lego.com/projects/fbe7172f-c422-45e6-a2e2-25d5d83f3488', 'https://ideas.lego.com/projects/65a490cc-7c3b-47ee-80fc-189cdd889e9f', 'https://ideas.lego.com/projects/dfc5c0ac-59ef-42a0-beb4-9cb7558f0b32', 'https://ideas.lego.com/projects/5ff51711-6072-49fe-8d39-aa8c0bd815b4', 'https://ideas.lego.com/projects/7aa1e2ed-12df-4a73-9e4b-b595a16d3760', 'https://ideas.lego.com/projects/1e1a73ab-9909-4b2f-941b-02d7eec8fb37']}\n"
+      "['https://ideas.lego.com/projects/9193e8c1-0546-4e73-99a2-2f89c5e2ddd3', 'https://ideas.lego.com/projects/4fab9083-ec71-46bf-80d9-3d5129626a93', 'https://ideas.lego.com/projects/8529a4b5-f36a-4779-943e-55c196e772e8', 'https://ideas.lego.com/projects/aa4cfa30-e9a2-418d-a1a0-79638e50a54f', 'https://ideas.lego.com/projects/1ef44bb0-7e5a-4484-94b6-2fee44fe3dc6']\n",
+      "5\n",
+      "{'id': ['2f89c5e2ddd3', '3d5129626a93', '55c196e772e8', '79638e50a54f', '2fee44fe3dc6'], 'uuid': [UUID('06d6afa6-f7f3-4fff-8e48-212ebc29c5bc'), UUID('1546c19f-41e8-4d9e-b376-c305d5fb6808'), UUID('31a10072-a1cc-4ea4-a366-c1e8051793e2'), UUID('c64214ea-5f10-43ee-9573-da1858429540'), UUID('b04bd009-adc1-4071-8394-a5167a38477d')], 'URL': ['https://ideas.lego.com/projects/9193e8c1-0546-4e73-99a2-2f89c5e2ddd3', 'https://ideas.lego.com/projects/4fab9083-ec71-46bf-80d9-3d5129626a93', 'https://ideas.lego.com/projects/8529a4b5-f36a-4779-943e-55c196e772e8', 'https://ideas.lego.com/projects/aa4cfa30-e9a2-418d-a1a0-79638e50a54f', 'https://ideas.lego.com/projects/1ef44bb0-7e5a-4484-94b6-2fee44fe3dc6']}\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
     "        else:\n",
     "            self.driver = Chrome(ChromeDriverManager().install())\n",
     "        self.url = url\n",
-    "        self.search_term = input('What would you like to search?')\n",
+    "        self.search_term = search_term.upper()\n",
     "        self.driver.get(self.url)\n",
     "   \n",
     "    def open_url(self, url):\n",
@@ -136,10 +136,14 @@
     "            last_height = new_height\n",
     "\n",
     "    def get_list_links(self, XPATH_container, XPATH_search_results, delay=10):\n",
-    "        try: \n",
+    "        try: #this is causing problems when it doesn't need to press see_more\n",
     "            self.scroll_down_bottom()\n",
-    "            self.see_more('//*[@id=\"search-more\"]/a')\n",
-    "            self.infinite_scroll()\n",
+    "            try:\n",
+    "                self.see_more('//*[@id=\"search-more\"]/a')\n",
+    "                self.infinite_scroll()\n",
+    "                pass\n",
+    "            except NoSuchElementException:\n",
+    "                pass\n",
     "            container = self.driver.find_element(By.XPATH, XPATH_container)\n",
     "            search_list = container.find_elements(By.XPATH, XPATH_search_results)\n",
     "\n",
@@ -154,8 +158,8 @@
     "            print(len(self.link_list))\n",
     "\n",
     "        except NoSuchElementException:\n",
-    "            print('No results found.')\n",
-    "            pass\n",
+    "            print('No results found. Try another search term.')\n",
+    "            pass #don't want it to pass. Want it to start again.\n",
     "    \n",
     "    def get_img_links(self, XPATH_wrapper, XPATH_main_image, XPATH_img_container, XPATH_thumbnails):\n",
     "        self.img_list = []\n",
@@ -175,10 +179,12 @@
     "                    thumbnail_link = img_tag.get_attribute('src')\n",
     "                    self.img_list.append(thumbnail_link)\n",
     "\n",
+    "                print(self.img_list)\n",
     "\n",
     "            except NoSuchElementException:\n",
     "                print('No images found.')\n",
     "                pass\n",
+    "\n",
     "    def create_id(self):\n",
     "        self.link_id = []\n",
     "        self.link_uuid = []\n",
@@ -207,7 +213,8 @@
     "if __name__ == '__main__': \n",
     "\n",
     "    def web_scraper():\n",
-    "        scraper = Scraper('https://ideas.lego.com')\n",
+    "        search_term = input('I would like to search for... ')\n",
+    "        scraper = Scraper('https://ideas.lego.com', search_term)\n",
     "        try:\n",
     "            scraper.accept_cookies(frame_id=None, XPATH= '//button[@aria-label=\"Reject cookies\"]')\n",
     "            #scraper.explore_product_ideas('//a[@class=\"sub-menu\"][1]', '//div[@class=\"header-link\"][1]')\n",
