alters search_term for easier testing

--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -218,7 +218,8 @@
     "if __name__ == '__main__': \n",
     "\n",
     "    def web_scraper():\n",
-    "        search_term = input('I would like to search for... ')\n",
+    "        #search_term = input('I would like to search for... ')\n",
+    "        search_term = 'violin'\n",
     "        scraper = Scraper('https://ideas.lego.com', search_term)\n",
     "        try:\n",
     "            scraper.accept_cookies(frame_id=None, XPATH= '//button[@aria-label=\"Reject cookies\"]')\n",
