adds get_details and get_info methods

--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -183,7 +183,29 @@
     "            self.img_list.append(self.individual_img_list)\n",
     "            pass\n",
     "        #print(self.img_list)\n",
-    "\n",
+    "   \n",
+    "    def get_info(self, XPATH_name, XPATH_date, XPATH_creator, XPATH_supporters, XPATH_days):\n",
+    "        self.name_list = []\n",
+    "        self.date_list = []\n",
+    "        self.creator_list =[]\n",
+    "        self.num_supporters_list = []\n",
+    "        self.num_days_remaining_list = []\n",
+    "        for link in self.link_list:\n",
+    "            self.open_url(link)\n",
+    "            self.get_details(lst_name = self.name_list, XPATH= XPATH_name)\n",
+    "            self.get_details(lst_name = self.date_list, XPATH= XPATH_date)\n",
+    "            self.get_details(lst_name = self.creator_list, XPATH= XPATH_creator)\n",
+    "            self.get_details(lst_name = self.num_supporters_list, XPATH= XPATH_supporters)\n",
+    "            self.get_details(lst_name = self.num_days_remaining_list, XPATH= XPATH_days)\n",
+    "            # name = self.driver.find_element(By.XPATH, XPATH_name)\n",
+    "            # self.name_list.append(name)\n",
+    "            # date = self.driver.find_element(By.XPATH, XPATH_date)\n",
+    "            # self.name_list.append(date)\n",
+    "    \n",
+    "    def get_details(self, XPATH, lst_name):\n",
+    "        detail = self.driver.find_element(By.XPATH, XPATH)\n",
+    "        lst_name.append(detail)\n",
+    "    \n",
     "    def create_id(self):\n",
     "        self.link_id = []\n",
     "        self.link_uuid = []\n",
@@ -197,6 +219,11 @@
     "        self.info = {\"id\": self.link_id,\n",
     "                \"uuid\": self.link_uuid,\n",
     "                \"URL\": self.link_list,\n",
+    "                \"idea_name\": self.name_list,\n",
+    "                \"date\": self.date_list,\n",
+    "                \"creator\": self.creator_list,\n",
+    "                \"number_of_supporters\": self.num_supporters_list,\n",
+    "                \"number_of_days_remaining\": self.num_days_remaining_list,\n",
     "                \"image_links\": self.img_list}\n",
     "        print(self.info)\n",
     "        return self.info\n",
@@ -230,7 +257,7 @@
     "            scraper.get_img_links(XPATH_main_image='//div[@class=\"image-sizing-wrapper\"]', XPATH_thumbnail_container='//div[@class=\"thumbnails-tray\"]', XPATH_thumbnails='./div')\n",
     "            scraper.create_id()\n",
     "            scraper.collate_info()\n",
-    "            scraper.download_images()\n",
+    "            #scraper.download_images()\n",
     "            #scraper.create_uuid()\n",
     "            # scraper.scroll_down_bottom()\n",
     "            # time.sleep(2)\n",
